<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registraiotn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.example.archi.homemaintenance.Activity.ActivityRegistraiotn">

    <RelativeLayout
        android:id="@+id/header_reg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/drawable_header_background">
        <include layout="@layout/header_editdetail_list"/>
      <!--  <ImageView
            android:id="@+id/header_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/drawable_button_add"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/header_tv_header_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toLeftOf="@+id/header_imgadd"
            android:gravity="center"
            android:text="@string/reg_createaccount"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"/>-->



    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/reg_fisrtname">

            <requestFocus />
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/reg_lastname" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/reg_email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/reg_zipcode" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/reg_password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/reg_confirmpassword" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/reg_agree" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/activity_registration_btnnext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@color/light_black"
                android:text="@string/login_next"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_12sdp" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
