<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.5">

            <TextView
                android:id="@+id/fragment_que_thirteen_txtquetion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/que_thirteen"
                android:textSize="@dimen/_13sdp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_5sdp"

            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="vertical"

                android:weightSum="4">

                <TextView
                    android:id="@+id/fragment_que_thirteen_txtoption1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/que_thirteen_option1"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/fragment_que_thirteen_txtoption2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/que_thirteen_option2"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/fragment_que_thirteen_txtoption3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/que_thirteen_option3"
                    android:textSize="@dimen/_13sdp" />

                <TextView
                    android:id="@+id/fragment_que_thirteen_txtoption4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/que_thirteen_option4"
                    android:textSize="@dimen/_13sdp" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>