<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.example.archi.homemaintenance.Activity.ActivityLogin">

    <RelativeLayout
        android:id="@+id/headerLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <include layout="@layout/header_editdetail_list"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_contacthome"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/login_email"
            >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/activity_login_txtcreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/login_createaccont"
            android:textSize="@dimen/_12sdp" />

        <Button
            android:id="@+id/activity_login_btnnext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/light_black"
            android:text="@string/login_next"
            android:layout_margin="@dimen/_5sdp"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp" />


    </LinearLayout>
</LinearLayout>
