<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/adapter_list_detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header_receipts_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/header_editdetail_list" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/fragment_receipts_editlistdetail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_350sdp"
                android:orientation="vertical"
                android:paddingTop="@dimen/_5sdp"
                android:weightSum="6">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView

                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/activity_add_receipt_tv_add_manual"
                        android:layout_weight="1"
                        android:text="@string/date_install"
                        android:textSize="@dimen/_15sdp" />

                    <EditText
                        android:id="@+id/fragment_receipts_editlistdetail_ed_bought_date"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:gravity="center"
                        android:hint="@string/select_date"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">


                    <EditText
                        android:id="@+id/fragment_receipts_editlistdetail_edproduct_and_services"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/activity_add_receiptmenually_spinnerdate"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/product_servise"
                        android:inputType="text"
                        android:textSize="@dimen/_15sdp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/fragment_receipts_editlistdetail_edcost"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/cost"
                        android:inputType="number"
                        android:textSize="@dimen/_15sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/fragment_receipts_editlistdetail_spinnerbusiness_service_pro"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:entries="@array/business"
                        android:inputType="text"
                        android:textSize="@dimen/_15sdp" />

                    <EditText
                        android:id="@+id/fragment_receipts_editlistdetail_edbusiness_service_pro"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableRight="@drawable/ic_forward"
                        android:hint="@string/releted_business_service_pro"
                        android:inputType="text"
                        android:textSize="@dimen/_15sdp"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fragment_receipts_editlistdetail_tv_add_vendor"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:gravity="right"
                        android:text="@string/add_new_vendor"
                        android:textColor="@color/blue_light"
                        android:textSize="@dimen/_15sdp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/fragment_receipts_editlistdetail_ednotes"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/notes"
                        android:inputType="text"
                        android:textSize="@dimen/_15sdp" />

                </LinearLayout>


            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp">

                <Button
                    android:id="@+id/fragment_receipts_editlistdetail_btnsubmit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentBottom="true"
                    android:background="@color/light_black"
                    android:text="@string/submit"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_10sdp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

